# beyond-the-besics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  how_migration_works.md  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: security-auditor.md  test-runner.md
.claude/commands/: gate.md  new-miniproject.md  run-project.md
.claude/hooks/: ruff-format.sh
app-scheduler/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  k8s.yaml  pyproject.toml  requirements.txt  run_scheduler.py  wsgi.py
app-scheduler/flask_ap_scheduler_app/: __init__.py  config.py  routes.py  scheduler.py
database-migration/: pyproject.toml
database-migration-demo/: README.md  main.py  migrator.py
database-migration-demo/migrations/: 001_create_users_table.py  002_add_age_to_users.py  __init__.py
database-migration/migrations/: 003_create_posts_table.py
feature-flag/: .gitignore  README.md  __init__.py  control_flow.md  pyproject.toml
feature-flag/api/: server.py
migration/: how_impal_migration_works.md  how_impala_migration_works.md  how_migration_works.md
multifactor-authentication/: README.md  database.py  models.py
multifactor-authentication-demo/: .gitignore  README.md  demo.py  main.py  pyproject.toml  security.py
rate-limiting/: .gitignore  README.md  main.py  pyproject.toml  start_server.py  stress_test.py
rate-limiting/app/core/: config.py  token_bucket.py
rate-limiting/app/middleware/: rate_limit.py
rate-limiting/app/routes/: api.py
rate-limiting/tests/: test_rate_limiter.py
(+14 files in other folders)
